crates/index-scheduler/src/scheduler/snapshots/test_document_addition.rs/test_document_addition_with_set_and_null_primary_key/documents.snap
---
source: crates/index-scheduler/src/scheduler/test_document_addition.rs
snapshot_kind: text
---
[
  {
    "paw": 2,
    "doggo": "jean bob"
  },
  {
    "paw": 3,
    "doggo": "jean bob"
  },
  {
    "paw": 4,
    "doggo": "jean bob"
  },
  {
    "paw": 5,
    "doggo": "jean bob"
  }
]
